Capacidad de Carga

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,3 +16,7 @@ The `Fisher's alpha.R` script generates the `Arlroy_Data.rds` file which has all
 ## Population, diversity and forest proportion
 
 This were calculated using the `GeneracionDeDatos.R` script
+
+## Calculation of carrying capacity
+
+Using `CarryingCapacity.R`
